force-app/main/default/objects/DeduplicationLog__c/DeduplicationLog__c.object-meta.xml
<CustomObject>
    <description>Logs for deduplication jobs and merges</description>
    <label>Deduplication Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deduplication Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>