force-app/main/default/objects/DeduplicationLog__c/fields/ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationId__c</fullName>
    <label>Configuration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>