force-app/main/default/objects/DeduplicationLog__c/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <label>Execution Time</label>
    <type>DateTime</type>
</CustomField>