force-app/main/default/objects/DeduplicationLog__c/fields/InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>InitiatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DeduplicateLogs</relationshipName>
    <type>Lookup</type>
</CustomField>