force-app/main/default/objects/DeduplicationLog__c/fields/IsScheduledJob__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scheduled Job</label>
    <type>Checkbox</type>
</CustomField>