force-app/main/default/objects/DeduplicationLog__c/fields/RecordIdsJSON__c.field-meta.xml
<CustomField>
    <fullName>RecordIdsJSON__c</fullName>
    <label>Record IDs JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>